Fixed alignment of Github logo/text

--- a/src/css/Education.css
+++ b/src/css/Education.css
@@ -11,10 +11,10 @@
 }
 
 img {
-  display: block;
+  /* display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
+  width: 50%; */
 }
 
 .education {
