--- a/src/css/Experience.css
+++ b/src/css/Experience.css
@@ -11,8 +11,8 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: 50%; */
-  margin-left: 4vw;
-  margin-right: 3vw;
+  /* margin-left: 4vw;
+  margin-right: 3vw; */
 }
 
 .idiv_experience {
